Fix: Fix top section height when menu is open on mobile
closes #27

--- a/src/global.css
+++ b/src/global.css
@@ -68,6 +68,6 @@ footer {
     font-size: 20px;
   }
   .landing-page-text {
-    font-size: 34px;
+    font-size: 30px;
   }
 }
